# mane_handbook_chatbot

./: .dockerignore  .env  .requirements.txt.un~  Dockerfile  README.md  deploy_to_cloud_run.sh  env.example  pyproject.toml  requirements.txt  requirements.txt~
.devcontainer/: devcontainer.json
chroma_db/: chroma.sqlite3
src/: app.py  app_cloud.py  chatbot.py  cloud_storage.py  firestore_chat.py  ingest.py
