[project]
name = "mane-handbook-chatbot"
version = "0.1.0"
description = "MANE Graduate Handbook Chatbot using OpenRouter and ChromaDB"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MANE Department"}
]
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langchain-openai>=0.0.2",
    "chromadb>=0.4.22",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "google-cloud-storage>=2.10.0",
    "google-cloud-firestore>=2.13.0",
    "google-auth>=2.23.0",
    "pysqlite3-binary>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
target-version = "py39"
